--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,11 @@
   </head>
 
   <body>
+  	<%= render 'layouts/navbar' %>
+      <% flash.each do |key, value| %>
+      <%= value %>
+      <br>
+      <% end %>
     <%= yield %>
   </body>
 </html>
