--- a/app/views/animal_shelters/index.html.erb
+++ b/app/views/animal_shelters/index.html.erb
@@ -27,7 +27,7 @@
     <%= form.label :animal_shelter_id, "Please enter company name" %>
     <%= form.text_field :animal_shelter_id %>   
 
-     <%= form.submit 'OK' %>     
+     <%= form.submit 'OK', data: {confirm: 'Are you sure?' } %>     
 <% end %>
 
 
