--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,9 +1,12 @@
 <% if current_user %>
 	Logged in as <%= current_user.first_name %>
 	<%= link_to "Sign Out", sign_out_path, method: "delete" %>
-	
 	<% if current_user.role == "animal_shelter" %>
-		<%= link_to "Create Pets", new_pet_path %>
+		<% if current_user.animal_shelter_id.nil? %>
+			<%= link_to "Create OR Find Company", animal_shelters_path %>
+		<% else %>
+			<%= link_to "Create Pets", new_pet_path %>
+		<% end %>
 	<% end %>
 <% else %>
 	<%= link_to "Sign Up", new_user_path %>
