--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,4 +1,4 @@
-<% if current_user %>
+<% if logged_in? %>
 	Logged in as <%= current_user.first_name %>
 	<%= link_to "Sign Out", sign_out_path, method: "delete" %>
 	<% if current_user.role == "animal_shelter" %>
